--- a/gatsby-starter-default/src/components/layout.css
+++ b/gatsby-starter-default/src/components/layout.css
@@ -52,11 +52,14 @@ template {
 }
 a {
   background-color: transparent;
+  text-decoration: none;
   -webkit-text-decoration-skip: objects;
+  color:white;
 }
 a:active,
 a:hover {
   outline-width: 0;
+  color: white;
 }
 abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
@@ -490,6 +493,8 @@ th {
 }
 li {
   margin-bottom: calc(1.45rem / 2);
+  color: white;
+  
 }
 ol li {
   padding-left: 0;
