--- a/gatsby-starter-default/src/components/layout.css
+++ b/gatsby-starter-default/src/components/layout.css
@@ -52,14 +52,19 @@ template {
 }
 a {
   background-color: transparent;
-  text-decoration: none;
+  
+ 
   -webkit-text-decoration-skip: objects;
-  color:white;
+  color:inherit;
+}
+li>a{
+  text-decoration: none;
 }
 a:active,
 a:hover {
   outline-width: 0;
-  color: white;
+  color: inherit;
+ 
 }
 abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
@@ -494,7 +499,17 @@ th {
 li {
   margin-bottom: calc(1.45rem / 2);
   color: white;
+  float:left;
+  display: block;
   
+ 
+   margin-left: 1.8rem;
+  margin-right: 0.1rem; 
+      
+  
+}
+#menu{
+  display: none;
 }
 ol li {
   padding-left: 0;
@@ -599,4 +614,11 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+
+  li{
+    display: block;
+    float: none;
+  }
+ 
+
 }
